# niftyconf

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen-win32  configure.ac  version
data/: Makefile.am  niftyconf-about.ui  niftyconf-chain.ui  niftyconf-info-hardware.ui  niftyconf-log.ui  niftyconf-props.ui  niftyconf-renderer.ui  niftyconf-setup-ledlist.ui  niftyconf-setup-props.ui  niftyconf-setup-tree.ui  niftyconf-setup.ui  niftyconf-view-setup.ui  niftyconf.desktop.in  niftyconf.desktop.in.in  niftyconf.ui
data/gfx/: Makefile.am
data/icons/: Makefile.am
debian/: README.Debian  changelog  changelog.in  control.tmpl.in  copyright
distros/ubuntu/: create-ubuntu-deb
distros/ubuntu/debian/: README.Debian  README.source  control  control.in  copyright
gentoo/media-gfx/niftyconf/: metadata.xml  niftyconf-9999.ebuild.in
src/: Makefile.am  niftyconf-chain.c  niftyconf-chain.h  niftyconf-clipboard.c  niftyconf-clipboard.h  niftyconf-hardware.c  niftyconf-hardware.h  niftyconf-info-hardware.c  niftyconf-info-hardware.h  niftyconf-led.c  niftyconf-led.h  niftyconf-log.c  niftyconf-log.h  niftyconf-props.c  niftyconf-props.h  niftyconf-setup-ledlist.c  niftyconf-setup-ledlist.h  niftyconf-setup-props.c  niftyconf-setup-props.h  niftyconf-setup-tree.c  niftyconf-setup-tree.h  niftyconf-setup.c  niftyconf-setup.h  niftyconf-tile.c  niftyconf-tile.h  niftyconf-ui.c  niftyconf-ui.h  niftyconf.c  niftyconf.h  version.c.in  version.h.in
src/elements/: element-chain.c  element-chain.h  element-hardware.c  element-hardware.h  element-led.c  element-led.h  element-setup.c  element-setup.h  element-tile.c  element-tile.h  niftyconf-chain.c  niftyconf-chain.h  niftyconf-hardware.c  niftyconf-hardware.h  niftyconf-led.c  niftyconf-led.h  niftyconf-setup.c  niftyconf-setup.h  niftyconf-tile.c  niftyconf-tile.h
src/live-preview/: live-preview.c  live-preview.h
src/prefs/: prefs.c  prefs.h
src/renderer/: niftyconf-renderer-chain.c  niftyconf-renderer-chain.h  niftyconf-renderer-led.c  niftyconf-renderer-setup.c  niftyconf-renderer-setup.h  niftyconf-renderer-tile.c  niftyconf-renderer-tile.h  niftyconf-renderer.c  niftyconf-renderer.h  renderer-chain.c  renderer-chain.h  renderer-led.c  renderer-led.h  renderer-setup.c  renderer-setup.h  renderer-tile.c  renderer-tile.h  renderer.c  renderer.h
src/ui/: niftyconf-about.c  niftyconf-about.h  niftyconf-clipboard.c  niftyconf-info-hardware.c  niftyconf-info-hardware.h  niftyconf-log.c  niftyconf-log.h  niftyconf-renderer.c  niftyconf-renderer.h  niftyconf-setup-ledlist.c  niftyconf-setup-ledlist.h  niftyconf-setup-props.c  niftyconf-setup-props.h  niftyconf-setup-tree.c  niftyconf-setup-tree.h  niftyconf-setup.c  niftyconf-ui.h  ui-about.c  ui-about.h  ui-chain.c  ui-chain.h  ui-clipboard.c  ui-clipboard.h  ui-hardware.c  ui-hardware.h  ui-info-hardware.c  ui-info-hardware.h  ui-live-preview.c  ui-live-preview.h  ui-log.c  ui-log.h  ui-renderer.c  ui-renderer.h  ui-setup-ledlist.c  ui-setup-ledlist.h  ui-setup-props.c  ui-setup-props.h  ui-setup-tree.c  ui-setup-tree.h  ui-setup.c  (+5 more)
