SUBDIRS = icons

desktopdir = $(datadir)/applications
desktop_DATA = niftyconf.desktop

uidir = $(pkgdatadir)

ui_DATA = \
	niftyconf.ui \
	niftyconf-setup.ui \
	niftyconf-setup-tree.ui \
	niftyconf-setup-props.ui \
	niftyconf-setup-ledlist.ui \
	niftyconf-renderer.ui \
	niftyconf-log.ui \
	niftyconf-info-hardware.ui \
	niftyconf-about.ui

EXTRA_DIST = $(ui_DATA)
